fix spacing between privacy policy and logos

--- a/res/index.css
+++ b/res/index.css
@@ -255,6 +255,9 @@ em {
   white-space: pre;
 }
 #privacy ul li p {
+  margin-bottom: 0;
+}
+#privacy ul li:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
